[package]
name = "audio-tldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
teloxide = "0.12.2"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.0", features = ["v4"] }
